2005-04-11  Daniel Berlin  <dberlin@dberlin.org>

Fix PR tree-optimization/20612
	* lambda-code.c (lambda_loopnest_to_gcc_loopnest): Fix increment
	handling
	(perfect_nestify): preheaderbb is *not* part of loop of the
	old destination.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@97979 138bc75d-0d04-0410-961f-82ee72b054a4